<resources>
    <string name="app_name">MengYinNotifier</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="introfab">Long Click This Button to set your birthday</string>

    <string name="progress">You still have\nYYYY years MM months DD days\nuntil 100 years old.</string>

    <string name="intro" translatable="false">随着科技的发展，2016年人类已经全面进入了信息爆发的时代，这个时代的特征是---界面和信息通过大数据潜在的影响人类各种行为的过程中，产生了大量的副作用。\n在数据爆发的时代，日益增长的信息量早已溢出普通人的时间规划，在这样现实冲突下，想要实现人生规划，活得更加有效率， 必须对自控能力和时间规划能力有进一步的高要求， 然而大多数人需要有养成良好的时间习惯， 必须通过工具辅助实现。\n这个APP 的目的，就是通过接轨新时代有亲和力的二次元文化外壳对接未来精英所必备的 时间规划内涵。\n我们的口号是\n\"萌音猫和未来的精英一起成长\"\n\"通过一款APP延长你10年有效寿命\"\n\"从时间牢笼中的困兽到掌控自我之神的转变\"</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_week_view">Time Manager</string>

    <string name="sleep">Sleeping</string>
    <string name="work">Working</string>
    <string name="study">Studying</string>
    <string name="sustain">Sustaining</string>
    <string name="recreation">Recreation</string>
    <string name="other">Other</string>

    <string name="share">Share</string>
    <string name="please_open_again">Please click Today to Refresh</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="color_picker">Color Picker</string>
    <string name="add_more">Add More</string>
    <string name="nav_advance">Advance</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="introfab2">Click for more functions</string>
    <string name="color_settings">Change Color</string>
    <string name="action_month_view">Month view</string>
    <string name="refresh_suc">Refreshed!</string>
    <string name="time_spending">Time Spending Details:</string>
    <string name="click_to_open">Click to open event switcher</string>
    <string name="advance_nav">Advance</string>
</resources>
