<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeekBaseActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item android:id="@+id/action_today"
        android:title="@string/action_today"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_day_view"
            android:title="@string/action_day_view"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:checked="true"/>
        <item android:id="@+id/action_three_day_view"
            android:title="@string/action_three_day_view"
            android:orderInCategory="100"
            app:showAsAction="never"/>
        <item android:id="@+id/action_week_view"
            android:title="@string/action_week_view"
            android:orderInCategory="100"
            app:showAsAction="never"/>
        <item android:id="@+id/action_month_view"
            android:title="@string/action_month_view"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    </group>
</menu>